# modloader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md
examples/simplemod/: CMakeLists.txt  mod.cpp
include/ModLoader/: CMakeLists.txt  Config.h.in  ModLoader.h  Platform.h
include/SymExtract/: CMakeLists.txt  Helpers.h
src/ModLoader/: CMakeLists.txt  Debugger.cpp  Debugger.h  Filesystem.cpp  Filesystem.h  HookDispatcher.cpp  HookDispatcher.h  Logger.cpp  Logger.h  Mod.cpp  Mod.h  ModLoader.cpp  ModLoaderEntry.cpp  ModLoaderEntry.h  ModLoaderImpl.cpp  ModLoaderImpl.h  SharedLibrary.cpp  SharedLibrary.h
src/ModLoader/Linux/: CMakeLists.txt  entry.cpp
src/ModLoader/Windows/: CMakeLists.txt  DebuggerImpl.cpp  DebuggerImpl.h  Filesystem.cpp  Filesystem.h  FilesystemImpl.cpp  FilesystemImpl.h  SharedLibrary.cpp  SharedLibrary.h  SharedLibraryImpl.cpp  SharedLibraryImpl.h  entry.cpp
src/ModLoader/Wrappers/: BlockLegacy.cpp  BlockLegacy.h  BlockTypeRegistry.cpp  BlockTypeRegistry.h  CMakeLists.txt  HashedString.h
src/Preloader/: CMakeLists.txt  main.c
src/SymExtract/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  Symbol.h  extract.h  main.cpp
src/SymExtract/Generator/: CMakeLists.txt  DefinitionTable.cpp  DefinitionTable.h  ForwardDecl.cpp  ForwardDecl.h  Generator.cpp  Generator.h  MemberFunctionDecl.cpp  MemberFunctionDecl.h  SymbolDecl.cpp  SymbolDecl.h  SymbolFunctionDecl.cpp  SymbolFunctionDecl.h  SymbolMemberFunctionDecl.cpp  SymbolMemberFunctionDecl.h  SymbolMemberFunctionInheritance.h  TypeDecl.cpp  TypeDecl.h
src/SymExtract/Schema/: AccessibilityLevel.h  CMakeLists.txt  Constant.h  DefinitionTable.cpp  ExternType.cpp  ExternType.h  Field.cpp  Field.h  FixedFunctionResolver.cpp  FixedFunctionResolver.h  ForwardDeclaration.cpp  ForwardDeclaration.h  Function.cpp  Function.h  FunctionArgument.cpp  FunctionArgument.h  FunctionResolution.h  FunctionResolver.h  FunctionSignature.h  FunctionSymbol.cpp  FunctionSymbol.h  Member.cpp  Member.h  MemberFunction.cpp  MemberFunction.h  MemberFunctionSymbol.cpp  MemberFunctionSymbol.h  Schema.cpp  Schema.h  SchemaFile.cpp  SchemaFile.h  Symbol.cpp  Symbol.h  SymbolType.h  Type.cpp  Type.h  TypeDescriptor.cpp  TypeDescriptor.h  TypeInheritance.h  TypeSizeDescriptor.cpp  (+3 more)
src/SymExtract/Windows/: CMakeLists.txt  Schema.cpp  loadergen.cpp  pdbextract.cpp
symbols/: platform_win32.json  schema.json  symbol_table_win32.slt  symbolnames_win32.json  symbols_win32.json
symbols/schema/: types.json
symbols/schema/types/: BlockLegacy.json  BlockTypeRegistry.json  DedicatedServer.json  HashedString.json  ServerInstanceEventCoordinator.json
